# runok

./: .copier-answers.yml  .gitignore  .mise.toml  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json  renovate.json5  runok.yml  srt-settings.json
.github/formula-template/: runok.rb
.github/scripts/: update-release-docs.bash
.github/workflows/: docs-skip.yml  docs.yml  nightly.yml  release-please.yml  test.yml
.sg/rules/: prefer-indoc.yml
.sg/tests/: prefer-indoc-test.yml
.sg/tests/__snapshots__/: prefer-indoc-snapshot.yml
crates/runok-linux-sandbox/: Cargo.toml
crates/runok-linux-sandbox/src/: bwrap.rs  landlock_sandbox.rs  lib.rs  main.rs  policy.rs  seccomp_sandbox.rs
crates/runok-linux-sandbox/tests/: sandbox_verification.rs
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.jsonc
docs/src/content/docs/: index.mdx  troubleshooting.md
docs/src/styles/: custom.css
schema/: runok.schema.json
scripts/: bootstrap
src/: audit_cmd.rs  lib.rs  main.rs
src/adapter/: check_adapter.rs  exec_adapter.rs  hook_adapter.rs  mod.rs  verbose.rs
src/audit/: error.rs  filter.rs  formatter.rs  json_entry.rs  log_rotator.rs  mod.rs  model.rs  reader.rs  recheck.rs  resolution.rs  writer.rs
src/cli/: hook_route.rs  mod.rs  route.rs  validate.rs
src/config/: cache.rs  dirs.rs  error.rs  git_client.rs  loader.rs  mod.rs  model.rs  path_resolver.rs  preset.rs  preset_remote.rs  required_version.rs
src/config/model/: audit_config.rs  definitions.rs  experimental_config.rs  merge.rs  mod.rs  parse.rs  rule.rs  sandbox.rs  schema_gen.rs  validate.rs
src/config/model/validate/: definitions_checks.rs  experimental_checks.rs  mod.rs  pattern_refs.rs  rule_checks.rs
src/config/preset/: extends.rs  mod.rs
src/config/preset_remote/: candidate_inspection.rs  mod.rs  reference.rs
src/exec/: command_executor.rs  error.rs  extension_runner.rs  glob_pattern.rs  glob_utils.rs  macos_sandbox.rs  mod.rs
src/exec/linux_sandbox/: bwrap.rs  error.rs  landlock_sandbox.rs  mod.rs  seccomp_sandbox.rs
src/exec/macos_sandbox/: glob_pattern.rs  mod.rs
src/init/: claude_code.rs  config_gen.rs  error.rs  mod.rs  prompt.rs  wizard.rs
src/init/wizard/: mod.rs  preview.rs  setup.rs
src/migrate/: claude_code_hook.rs  migration.rs  mod.rs  quote_optional_marker.rs  registry.rs  sandbox_fs.rs
src/pending_asks/: aggregator.rs  formatter.rs  mod.rs  model.rs
src/rules/: alias_expander.rs  command_parser.rs  error.rs  expr_evaluator.rs  mod.rs  pattern.rs  pattern_lexer.rs  pattern_matcher.rs  pattern_parser.rs  rule_engine.rs
src/rules/command_parser/: function_table.rs  mod.rs  redirect.rs  splitter.rs  tokenizer.rs  var_env.rs
src/rules/command_parser/splitter/: collect.rs  misparse.rs  mod.rs
src/rules/pattern/: parser.rs  tests.rs
src/rules/pattern_matcher/: flag_utils.rs  match_engine.rs  mod.rs  token_matching.rs
src/rules/rule_engine/: command_resolver.rs  compound.rs  dispatch.rs  flag_schema.rs  function.rs  mod.rs  require_command_in_path.rs  simple_eval.rs  wrapper.rs
src/test/: mod.rs
src/update_presets/: discovery.rs  mod.rs  semver_utils.rs  updater.rs
tests/: config_to_rule_evaluation.rs  optional_notation_and_path_ref.rs  sandbox_verification.rs  sandbox_verification_linux.rs  sandbox_verification_macos.rs  when_clause_rules.rs  wrapper_recursive_evaluation.rs
tests/common/: mod.rs
tests/e2e/: audit.rs  check_claude_code_hook.rs  check_format_auto_detect.rs  check_generic.rs  cli.rs  error_handling.rs  exec.rs  helpers.rs  init.rs  main.rs  migrate.rs  sandbox_fs_read_deny.rs  test_command.rs
tests/integration/: alias_expansion.rs  audit_log_integration.rs  command_context.rs  compound_command_evaluation.rs  config_to_rule_evaluation.rs  extends_resolution.rs  flag_group_evaluation.rs  flag_optional_value.rs  function_call_resolution.rs  init_wizard.rs  main.rs  migrate_config.rs  optional_notation_and_path_ref.rs  path_resolution.rs  property_based.rs  remote_preset_with_path.rs  require_command_in_path.rs  required_runok_version.rs  test_scope_isolation.rs  var_pattern_evaluation.rs  var_ref_evaluation.rs  variable_resolution.rs  when_clause_rules.rs  wrapper_recursive_evaluation.rs
tests/integration/proptest-regressions/: property_based.txt
tests/rule_evaluation/: config_to_rule_evaluation.rs  wrapper_recursive_evaluation.rs
(+92 files in other folders)
