[package]
name = "runok"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.101"
cel-interpreter = "=0.10.0"
clap = { version = "=4.5.57", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde-saphyr = "=0.0.17"
thiserror = "=2.0.18"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"

[dev-dependencies]
indoc = "=2.0.7"
rstest = "=0.26.1"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
