[workspace]
members = [".", "crates/runok-linux-sandbox"]
default-members = ["."]

[package]
name = "runok"
version = "0.1.1"
edition = "2024"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.182"

[dependencies]
anyhow = "=1.0.101"
cel-interpreter = "=0.10.0"
clap = { version = "=4.5.58", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde-saphyr = "=0.0.19"
serde_json = "=1.0.149"
sha2 = "=0.10.9"
shlex = "=1.3.0"
thiserror = "=2.0.18"
tree-sitter = "=0.25.10"
tree-sitter-bash = "=0.25.1"
which = "=8.0.0"

[dev-dependencies]
indoc = "=2.0.7"
rstest = "=0.26.1"
tempfile = "=3.25.0"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
