[workspace]
members = ["."]

[package]
name = "runok"
version = "0.2.3"
edition = "2024"
description = "Command execution permission framework for LLM agents"
license = "MIT"
repository = "https://github.com/fohte/runok"
homepage = "https://runok.fohte.net"
readme = "README.md"
keywords = ["llm", "sandbox", "security", "cli", "permissions"]
categories = ["command-line-utilities", "development-tools"]

[target.'cfg(unix)'.dependencies]
libc = "=0.2.185"

[target.'cfg(target_os = "linux")'.dependencies]
glob = "=0.3.3"
landlock = "=0.4.4"
seccompiler = "=0.5.0"

[dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.44", features = ["clock", "serde"] }
cel-interpreter = "=0.10.0"
clap = { version = "=4.6.1", features = ["derive"] }
owo-colors = { version = "=4.3.0", features = ["supports-colors"] }
terminal_size = "=0.4.4"
fs2 = "=0.4.3"
dialoguer = "=0.12.0"
schemars = { version = "=1.2.1", optional = true }
semver = "=1.0.28"
serde = { version = "=1.0.228", features = ["derive"] }
serde-saphyr = "=0.0.23"
serde_json = "=1.0.149"
sha2 = "=0.11.0"
shlex = "=1.3.0"
similar = { version = "=2.7.0", features = ["unicode"] }
thiserror = "=2.0.18"
tree-sitter = "=0.26.8"
tree-sitter-bash = "=0.25.1"

[features]
config-schema = ["dep:schemars"]

[dev-dependencies]
# Required separately from the optional dep: tests use
# `cfg_attr(any(feature = "config-schema", test), derive(JsonSchema))`
# so schemars must be available under `cfg(test)` without the feature flag.
schemars = "=1.2.1"

assert_cmd = "=2.2.1"
indoc = "=2.0.7"
predicates = "=3.1.4"
regex = "=1.12.3"
proptest = "=1.11.0"
rstest = "=0.26.1"
serde_json = "=1.0.149"
tempfile = "=3.27.0"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
