[package]
name = "runok-linux-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.5.60", features = ["derive"] }
glob = "=0.3.3"
landlock = "=0.4.4"
libc = "=0.2.182"
seccompiler = "=0.5.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"

[dev-dependencies]
rstest = "=0.26.1"
tempfile = "=3.25.0"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
